# django-dbconn-retry

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: django.yml  publish.yml
django_dbconn_retry/: __init__.py  apps.py
django_dbconn_retry/tests/: __init__.py
django_dbconn_retry/tests/test_project/test_project/: settings.py
test_project/: manage.py
test_project/test_project/: asgi.py  settings.py  urls.py  wsgi.py
