[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-dbconn-retry"
version = "0.3.1"
description = "Patch Django to retry a database connection first before failing."
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
  {name = "Jonas Maurus (@jdelic)", email = "jonas-dbconn-retry@gopythongo.com"},
]
maintainers = [
  {name = "GoPythonGo.com", email = "info@gopythongo.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["django_dbconn_retry*"]
