[metadata]
name = django-dbconn-retry
version = 0.3.1
description = Patch Django to retry a database connection first before failing.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
license_files =
author = Jonas Maurus (@jdelic)
author_email = jonas-dbconn-retry@gopythongo.com
maintainer = GoPythonGo.com
maintainer_email = info@gopythongo.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3 :: Only
    Operating System :: POSIX

[options]
python_requires = >=3.8
packages =
    django_dbconn_retry
    django_dbconn_retry.tests
